# 5-Crowns---Fastapi-HTMX

./: .env.example  .gitignore  5 Crowns - Fastapi HTMX.code-workspace  API_REFERENCE.md  EMAIL_FEATURE_SUMMARY.md  EMAIL_SETUP.md  MULTI_ROOM_GUIDE.md  MULTI_ROOM_SUMMARY.md  actions.py  app.py  app.py.backup  conftest.py  connection_manager.py  content.py  email_service.py  five_crowns.py  pyproject.toml  requirements.txt  room_manager.py  score_hand.py  yet_another_score.py
static/css/: site.css
templates/: actions.html  cards.html  discard.html  draw_card.html  error.html  game_alerts.html  game_started.html  htmx_user_generic.html  id_already_in_game.html  lobby.html  login.html  logins.html  mini_drag.html  notifications.html  one_card.html  out_cards.html  player_already_in_game.html  room_select.html  score_card.html  score_card_detail.html  scores.html  sort_example.html  table.html  top_discard.html  turn.html
tests/: test_action.py  test_app.py  test_card.py  test_connection_manager.py  test_content.py  test_deck.py  test_game.py  test_player.py  test_process_message.py  test_room_manager.py  test_room_routes.py
