[project]
name = "5-crowns-fastapi-htmx"
version = "0.1.0"
requires-python = ">=3.14"
dependencies = [
    "annotated-types>=0.7.0",
    "anyio>=4.12.1",
    "asyncio>=4.0.0",
    "certifi>=2026.1.4",
    "click>=8.3.1",
    "colorama>=0.4.6",
    "coverage>=7.13.4",
    "fastapi[standard]>=0.129.0",
    "h11>=0.16.0",
    "httpcore>=1.0.9",
    "httptools>=0.7.1",
    "httpx>=0.28.1",
    "idna>=3.11",
    "iniconfig>=2.3.0",
    "jinja2>=3.1.6",
    "loguru>=0.7.3",
    "markupsafe>=3.0.3",
    "packaging>=26.0",
    "pip>=26.0.1",
    "pluggy>=1.6.0",
    "pydantic>=2.12.5",
    "pydantic-core>=2.41.5",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.0.0",
    "pytest-repeat>=0.9.4",
    "python-dotenv>=1.2.1",
    "python-multipart>=0.0.22",
    "pyyaml>=6.0.3",
    "ruff>=0.15.1",
    "setuptools>=82.0.0",
    "sniffio>=1.3.1",
    "starlette>=0.52.1",
    "typing-extensions>=4.15.0",
    "uvicorn>=0.41.0",
    "watchfiles>=1.1.1",
    "websockets>=16.0",
]
